--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Linking the script -->
-    <script src="script.js"></script>
-    <script src="night.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/night.js"></script>
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/e308f5f709.js" crossorigin="anonymous"></script>
